header + footer + main

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,9 +9,12 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+    <header style="height:50px; background-color:#444444; width:100%; color:white;text-align:center;">
+        <h2>HEADER</h2>
+    </header>
     
 
-         <div class="off-canvas-wrap" data-offcanvas>
+         <main class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap" >
           <nav class="tab-bar">
             <section class="left-small">
@@ -168,8 +170,10 @@
         <a class="exit-off-canvas"></a>
 
         </div>
-      </div>
-
+      </main>
+    <footer style="height:60px; background-color:#444444; width:100%;text-align:center; clear:both;">
+      <h2>FOOTER</h2>
+    </footer>
 
 
 
